--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.9.0
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.2
@@ -18,6 +19,7 @@ Flask==3.1.1
 flatbuffers==25.2.10
 fsspec==2025.5.1
 google-auth==2.40.3
+google-search-results==2.4.2
 googleapis-common-protos==1.70.0
 grpcio==1.73.0
 h11==0.16.0
@@ -72,6 +74,7 @@ requests-oauthlib==2.0.0
 rich==14.0.0
 rpds-py==0.25.1
 rsa==4.9.1
+serpapi==1.1.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
